Fixing z-index

--- a/themes/ABC_amsterdam/css/panels.css
+++ b/themes/ABC_amsterdam/css/panels.css
@@ -1,5 +1,7 @@
 footer .main-container{
     padding: 50px 80px;
+    position: relative;
+    z-index: 1;
 }
 .navigation-panel{
     background-color: var(--bg-dark);
